filter for dispatch products and other changes

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -10,6 +10,7 @@ es:
     users: Usuarios
     errors: Errores
     audits: Auditoria
+    dispatch_products: Producto del despacho
   actions_name:
     new: Crear
     edit: Editar
